2011-05-26  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (DoubleTLSClient.__child): Flush log output on
	NSPRError.

2011-05-25  Miloslav Trmač  <mitr@redhat.com>

	* README: Clarify how koji accounts are used.

	* src/server.py (ServerConfiguration._add_sections)
	(ServerConfiguration._read_configuration): Don't duplicate handling of
	database-path in ServerBaseConfiguration.

	* src/utils.py (KojiConfiguration): New class.
	(koji_read_config): Use a KojiConfiguration parameter instead of
	handling the file path directly.
	* src/bridge.py (BridgeConfiguration): Use utils.KojiConfiguration.
	(BridgeConfiguration._add_defaults)
	(BridgeConfiguration._read_configuration): Don't handle koji-config.
	explicitly.
	(RequestType.forward_request_payload): New parameter config.  All
	subclasses and users updated.
	(KojiClient.__init__): New parameter config.  All users updated.
	(KojiClient.__get_session): Don't use an undefined variable.
	* src/client.py (ClientConfiguration): Use utils.KojiConfiguration.
	(ClientConfiguration._add_defaults)
	(ClientConfiguration._read_configuration): Don't handle koji-config.
	(SignRPMArgumentExaminer.__init__): New parameter config.  All users
	updated.
	(SignRPMArgumentExaminer.open_rpm): Don't use an undefined variable.
	* config/bridge.conf (koji-config)
	* config/client.conf (koji-config): Move example to a separate koji
	section.

	* src/utils.py (Configuration._add_sections): New method.  All
	subclasses updated.
	(Configuration.__init__): Add all sections to the parser explicitly
	to avoid errors when a section is not present in the config file.

2011-05-25  Dan Horák <dan@danny.cz>

	* src/bridge.py (BridgeConfiguration._add_defaults)
	(BridgeConfiguration._read_configuration)
	* src/client.py (ClientConfiguration._add_defaults)
	(ClientConfiguration._read_configuration): Handle koji-config.
	* src/utils.py (koji_read_config): New parameter koji_config.  All users
	updated.
	* config/bridge.conf (koji-config)