@@ -1,5 +1,9 @@
 2011-05-26  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (bridge_one_request)
+	* src/double_tls.py (DoubleTLSClient.__child): Make reporting of
+	expired certificate errors more user-friendly.
+
 	* src/double_tls.py (DoubleTLSClient.__child): Flush log output on
 	NSPRError.
 
